completed 4th step of adding userscope in backend